<resources>

    <!-- System -->
    <string name="app_name">Diary3</string>
    <string name="debug_tag">:: MY DEBUG :: </string>
    <string name="back_pressed">뒤로가기 버튼을 한 번 더 누르면 종료됩니다.</string>
    <string name="hash_key_null">해시 키 = null</string>

    <!-- Kakao Login -->
    <string name="app_key">fSCu1et8jLAXKCIAnRsbIrGdd/s=</string>
    <string name="native_key">c637329c74dbb903e8780ab2f6753e74</string>
    <string name="kakao_native_key">kakaoc637329c74dbb903e8780ab2f6753e74</string>

    <string name="kakao_token_info_fail">토큰 정보 보기 실패</string>
    <string name="kakao_token_info_success">토큰 정보 보기 성공</string>

    <string name="kakao_err_access_denied">접근이 거부됨(동의 취소)</string>
    <string name="kakao_err_invalid_client">유효하지 않은 앱</string>
    <string name="kakao_err_invalid_grant">인증 수단이 유효하지 않아 인증할 수 없는 상태</string>
    <string name="kakao_err_invalid_request">요청 파라미터 오류</string>
    <string name="kakao_err_invalid_scope">유효하지 않은 scope ID</string>
    <string name="kakao_err_misconfigured">설정이 올바르지 않음(android key hash)</string>
    <string name="kakao_err_server">서버 에러</string>
    <string name="kakao_err_unauthorized">앱이 요청 권한이 없음</string>
    <string name="kakao_err_unknown">기타 에러</string>

    <string name="kakao_login_success">로그인 성공!</string>
    <string name="kakao_logout_success">로그아웃 성공, SDK 에서 토큰 삭제됨</string>
    <string name="kakao_login_fail">로그인 실패..</string>
    <string name="kakao_logout_fail">로그아웃 실패, SDK 에서 토큰 삭제됨</string>
    <string name="kakao_get_user_info_success">사용자 정보 요청 성공</string>
    <string name="kakao_get_user_info_fail">사용자 정보 요청 실패</string>

    <string name="system_kakao_logout_fail">로그아웃에 실패하였습니다.</string>
    <string name="system_kakao_logout_success">로그아웃 되었습니다.</string>

    <!-- LoginActivity -->
    <string name="id_hint">아이디를 입력하세요.</string>
    <string name="pw_hint">비밀번호를 입력하세요.</string>
    <string name="login_normal"><b>로그인</b></string>
    <string name="create_account"><u>계정 생성</u></string>

    <!-- RegisterActivity -->
    <string name="guide_profile">프로필 사진을 등록하세요.</string>
    <string name="guide_pw_incorrect">비밀번호 불일치</string>
    <string name="guide_pw_correct">비밀번호 일치</string>

    <string name="text_nickName">닉네임</string>
    <string name="text_id">아이디</string>
    <string name="text_pw">비밀번호</string>
    <string name="text_pw_2">비밀번호 확인</string>

    <string name="hint_nickName">닉네임을 입력하세요.</string>
    <string name="hint_id">아이디를 입력하세요.</string>
    <string name="hint_pw">비밀번호를 입력하세요.</string>
    <string name="hint_pw_2">비밀번호를 한번 더 입력하세요.</string>

    <string name="register">가입하기</string>

    <!-- Bottom Navigation Bar Menu -->
    <string name="menu_recent">최근일기</string>
    <string name="menu_my_list">내일기</string>
    <string name="menu_drawer">내서랍</string>
    <string name="menu_1_line">한줄일기</string>

    <!-- DrawerLayout -->
    <string name="menu_profile">내 프로필</string>
    <string name="menu_friends">친구목록</string>
    <string name="menu_center">고객센터</string>
    <string name="logout">로그아웃</string>

    <string name="temp_nickName">닉네임8989</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>