<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/vg_drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4D8E8E8E">

    <ImageView
        android:id="@+id/iv_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:src="@drawable/icon_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_profile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:adjustViewBounds="true"
        android:src="@drawable/icon_no_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_close"
        app:layout_constraintWidth_percent="0.1" />

    <TextView
        android:id="@+id/tv_nickName"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:ellipsize="end"
        android:gravity="start|center"
        android:text="@string/temp_nickName"
        android:textColor="@color/white"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/iv_profile"
        app:layout_constraintEnd_toStartOf="@id/iv_close"
        app:layout_constraintStart_toEndOf="@id/iv_profile"
        app:layout_constraintTop_toTopOf="@id/iv_profile" />

    <View
        android:id="@+id/view_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="20dp"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/iv_profile" />

    <LinearLayout
        android:id="@+id/vg_menu_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="start"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/view_line">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/vg_menu_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/tv_menu_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_profile"
                android:textColor="@color/white"
                android:textSize="16dp"
                android:textStyle="normal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white_30" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/vg_menu_friends"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/tv_menu_friends"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_friends"
                android:textColor="@color/white"
                android:textSize="16dp"
                android:textStyle="normal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white_30" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/vg_menu_center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/tv_menu_center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_center"
                android:textColor="@color/white"
                android:textSize="16dp"
                android:textStyle="normal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/vg_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        app:layout_constraintWidth_percent="0.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/tv_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:textColor="@color/white"
            android:textSize="14dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintTop_toTopOf="@id/iv_logout"
            app:layout_constraintBottom_toBottomOf="@id/iv_logout"
            app:layout_constraintEnd_toStartOf="@id/iv_logout"/>

        <ImageView
            android:id="@+id/iv_logout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/icon_logout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_percent="0.1" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>